fix(jobs): job detail page dark mode fix

--- a/src/styles/includes/_job-details.scss
+++ b/src/styles/includes/_job-details.scss
@@ -40,6 +40,16 @@
 	.headline-1 {
 		@include spacing-700(margin-top);
 
+		@include bp-xs {
+			br {
+				content: " ";
+			}
+
+			br::after {
+				content: " ";
+			}
+		}
+
 		span {
 			@include headline-202();
 		}
